--- a/ClassTask/app/src/main/AndroidManifest.xml
+++ b/ClassTask/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.ClassTask"
         tools:targetApi="31">
         <activity
+            android:name=".adapter.adap"
+            android:exported="false" />
+        <activity
+            android:name=".adapter.RecyclerViewAdapter"
+            android:exported="false" />
+        <activity
             android:name=".Dashboard"
             android:exported="true">
             <intent-filter>
