--- a/SplashAndButtonNavigation/app/src/main/AndroidManifest.xml
+++ b/SplashAndButtonNavigation/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.SplashAndButtonNavigation"
         tools:targetApi="31">
         <activity
+            android:name=".TabAndViewPager"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".DashboardActivity"
             android:exported="false" />
         <activity
