--- a/firebaseDatabase/app/src/main/AndroidManifest.xml
+++ b/firebaseDatabase/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.FirebaseDatabase"
         tools:targetApi="31">
         <activity
-            android:name=".UpdateProduct"
+            android:name=".Ui.Activity.UpdateProduct"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,10 +25,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AddProductActivity"
+            android:name=".Ui.Activity.AddProductActivity"
             android:exported="false" />
         <activity
-            android:name=".DashboardActivity"
+            android:name=".Ui.Activity.DashboardActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,7 +37,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ResetPassword"
+            android:name=".Ui.Activity.ResetPassword"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -46,7 +46,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".Ui.Activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
