followed mvvm arch ignore sensor activities

--- a/firebaseDatabase/app/src/main/AndroidManifest.xml
+++ b/firebaseDatabase/app/src/main/AndroidManifest.xml
@@ -2,9 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,6 +16,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FirebaseDatabase"
         tools:targetApi="31">
+        <activity
+            android:name=".Ui.Activity.SensorListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Ui.Activity.SensorDashboardActivity"
+            android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+
+        </activity>
+<!--        <activity-->
+<!--            android:name=".Ui.Activity.SensorDashboardActivity"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".Ui.Activity.UpdateProduct"
             android:exported="true">
@@ -29,6 +46,15 @@
             android:exported="false" />
         <activity
             android:name=".Ui.Activity.DashboardActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".Ui.Activity.ResetPassword"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
